--- a/client/public/index.html
+++ b/client/public/index.html
@@ -9,7 +9,8 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <script src="https://cdn.tailwindcss.com"></script>
+    <!-- <script src="https://cdn.tailwindcss.com"></script> -->
+    <!-- <link href="../src/output.css" rel="stylesheet"> -->
     <link rel="" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
